fix for z-index availability

--- a/css/bgclock.css
+++ b/css/bgclock.css
@@ -34,6 +34,9 @@ a{
 button{
   padding:0;
 }
+div{
+  position:relative;
+}
 /* Grid Layout settings ------------------------------------- */
 /* 以下すべて相対サイズにし、レスポンシブ対応可能にしておく */
 #mainwindow{
